[fix] fix extra right spacing on web

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .App {
@@ -10,6 +11,8 @@
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .main {
@@ -18,6 +21,7 @@
   flex-direction: column;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 .logo {
