--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -6,9 +6,7 @@
   display: flex;
   align-items: center;
   margin: 0;
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
-  margin-right: calc(-50vw + 50%);
+  width: 100%;
   padding-top: var(--header-height);
 }
 
